feat : set framework for creating and retrieving posts (#2269)
* feat : set framework for creating and retrieving posts

* implement code review comments

* implement code review comments