@@ -1,10 +1,12 @@
 package com.example.highrps.config;
 
-import com.example.highrps.model.EventDto;
-import com.example.highrps.repository.StatsEntity;
-import com.example.highrps.repository.StatsRepository;
+import com.example.highrps.mapper.NewPostRequestToPostEntityMapper;
+import com.example.highrps.model.request.NewPostRequest;
+import com.example.highrps.repository.PostRepository;
+import com.example.highrps.repository.TagRepository;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -19,7 +21,9 @@ public class ScheduledBatchProcessor {
     private static final Logger log = LoggerFactory.getLogger(ScheduledBatchProcessor.class);
 
     private final RedisTemplate<String, String> redis;
-    private final StatsRepository repo;
+    private final NewPostRequestToPostEntityMapper newPostRequestToPostEntityMapper;
+    private final PostRepository postRepository;
+    private final TagRepository tagRepository;
     private final JsonMapper mapper;
 
     private final String queueKey;
@@ -27,12 +31,16 @@ public class ScheduledBatchProcessor {
 
     public ScheduledBatchProcessor(
             RedisTemplate<String, String> redis,
-            StatsRepository repo,
+            NewPostRequestToPostEntityMapper newPostRequestToPostEntityMapper,
+            PostRepository postRepository,
+            TagRepository tagRepository,
             JsonMapper mapper,
             @Value("${app.batch.queue-key}") String queueKey,
             @Value("${app.batch.size}") int batchSize) {
         this.redis = redis;
-        this.repo = repo;
+        this.newPostRequestToPostEntityMapper = newPostRequestToPostEntityMapper;
+        this.postRepository = postRepository;
+        this.tagRepository = tagRepository;
         this.mapper = mapper;
         this.queueKey = queueKey;
         this.batchSize = batchSize;
@@ -41,7 +49,7 @@ public class ScheduledBatchProcessor {
     @Scheduled(fixedDelayString = "${app.batch.delay-ms}")
     public void processBatch() {
         List<String> items = redis.opsForList().rightPop(queueKey, batchSize);
-        if (items.isEmpty()) {
+        if (items == null || items.isEmpty()) {
             return;
         }
 
@@ -49,18 +57,18 @@ public class ScheduledBatchProcessor {
                 .filter(Objects::nonNull)
                 .map(s -> {
                     try {
-                        return mapper.readValue(s, EventDto.class);
+                        return mapper.readValue(s, NewPostRequest.class);
                     } catch (Exception e) {
                         log.warn("Failed to deserialize event: {}", s, e);
                         return null;
                     }
                 })
                 .filter(Objects::nonNull)
-                .map(d -> new StatsEntity(d.getId(), d.getValue()))
-                .toList();
+                .map(newPostRequest -> newPostRequestToPostEntityMapper.convert(newPostRequest, tagRepository))
+                .collect(Collectors.toList());
         if (!entities.isEmpty()) {
             try {
-                repo.saveAll(entities);
+                postRepository.saveAll(entities);
             } catch (Exception e) {
                 log.error("Failed to persist batch of {} entities, re-queuing", entities.size(), e);
                 // Re-queue items to avoid data loss
